[gd_scene load_steps=7 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://GameObjects/ActionPreparation/Swoop.tscn" type="PackedScene" id=2]
[ext_resource path="res://GameObjects/Attacks/Melee/SimpleMelee.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sounds/ThumbOct1.wav" type="AudioStream" id=4]
[ext_resource path="res://Sounds/ThumbOct2.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 250 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="."]
polygon = PoolVector2Array( 0, 0, 0, 500, 10, 500, 10, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 5, 250 )
shape = SubResource( 1 )

[node name="Actions" type="Node2D" parent="."]

[node name="TeleportRight" parent="Actions" instance=ExtResource( 2 )]
position = Vector2( 10, 0 )
color = Color( 0.431373, 0.878431, 1, 0.447059 )
end_pos = 300
reset_after_end_pos_reached = true
speed = 400

[node name="TeleportLeft" parent="Actions" instance=ExtResource( 2 )]
color = Color( 0.431373, 0.878431, 1, 0.447059 )
start_pos = -100
end_pos = -300
reset_after_end_pos_reached = true
speed = 400

[node name="MeleeSwoopRight" parent="Actions" instance=ExtResource( 2 )]
position = Vector2( 10, 0 )
color = Color( 1, 0.662745, 0.270588, 0.392157 )
start_pos = 80
end_pos = 110
swoop_back = true

[node name="MeleeSwoopLeft" parent="Actions" instance=ExtResource( 2 )]
color = Color( 1, 0.662745, 0.270588, 0.392157 )
start_pos = -80
end_pos = -110
swoop_back = true

[node name="SimpleMeleeRight" parent="Actions" instance=ExtResource( 3 )]
position = Vector2( 11, 0 )
damage = 100

[node name="SimpleMeleeLeft" parent="Actions" instance=ExtResource( 3 )]
position = Vector2( -1, 0 )
damage = 100
distance = -100

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 0, 250 )
current = true
smoothing_enabled = true
drag_margin_left = 0.05
drag_margin_right = 0.05

[node name="AudioStreamPlayer1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -3.0

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -4.0
